# vina-doctor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.prod.yml  docker-compose.yml
.specify/: integration.json  (+1 more)
ai_engine/: .env.example  MASTER_CLINICAL_AGENT_PROMPT.md  MASTER_MEDICAL_SCRIBE_PROMPT.md  README.md  __init__.py  agents.md  ai-egine.md  audio.py  clinical_prompts.py  main.py  orchestrator.py  pyproject.toml  scribe_prompts.py  text_cleaner.py
ai_engine/agents/: clinical_agent.py  clinical_prompts.py  icd10_selector_agent.py  icd10_selector_prompts.py  reporter.py  scribe_agent.py  scribe_prompts.py
ai_engine/application/use_cases/: process_consultation_use_case.py  update_api_key_use_case.py  update_dashscope_url_use_case.py  update_icd10_enrich_use_case.py  update_model_use_case.py
ai_engine/domain/: config_repository.py  entities.py  protocols.py  value_objects.py
ai_engine/infrastructure/: model_selector.py  state_tracker.py
ai_engine/infrastructure/clients/: qwen_asr_client.py  qwen_audio_client.py
ai_engine/infrastructure/config/: file_config_repository.py
ai_engine/infrastructure/medical/: __init__.py  icd10_repository.py
ai_engine/infrastructure/vad/: voice_activity_detector.py
ai_engine/processors/: audio.py  text_cleaner.py
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20a6a425cee7_initial_schema.py  a1b2c3d4e5f6_add_transcript_json_to_reports.py  b2c3d4e5f6g7_add_doctor_profile_fields.py
backend/api/v1/: deps.py
backend/application/services/: consultation_orchestrator.py
backend/core/: config.py  feature_flags.py  security.py
backend/domain/: entities.py  errors.py  repositories.py  value_objects.py
(+142 files in other folders)
