[project]
name = "backend"
version = "0.1.0"
description = "Vina Doctor backend API service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20.0",       # SQLite async driver (dev/MVP)
    "asyncpg>=0.29.0",         # PostgreSQL async driver (production)
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "alembic>=1.13.0",
    "email-validator>=2.1.0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = ".."}
packages = ["backend"]
